<resources>
    <string name="app_name">NewZtmTimeTable</string>
    <string name="main_activity_title">GdanskApp</string>
    <string name="location">Gdansk</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_language">Language</string>
    <string name="refresh">Refresh</string>

    <string name="route_title_bar">Routes</string>
    <string name="stops_title_bar">Bus stops</string>
    <string name="schema_title_bar">Schema</string>
    <string name="map_title_bar">Map</string>
    <string name="share_title_bar">Share</string>
    <string name="settings_title_bar">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="language_setting">Language setting</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="polish_language">PL</string>
    <string name="english_language">ENG</string>
    <string name="add_to_fav">Add to favourite</string>

    <string name="remove_from_fav">Remove from fav</string>
    <string name="added_to_fav">Added to favourite</string>
    <string name="removed_from_fav">Removed from favourite</string>

    <string name="main_screen_fav_stop">Your fav bus stop</string>
    <string name="title_activity_settings2">Settings</string>


    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Favourite bus stop</string>
    <string name="pref_default_display_name">1709</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Data sync settings</string>

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Allow notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_bus_stop">Your favourite bus stop</string>

    <string name="exit">Exit</string>
    <string name="turn_wifi">Turn on wifi</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_internet2">Please provide internet connection</string>


</resources>
