<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/route_title_bar" />
        <item
            android:id="@+id/nav_stops"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/stops_title_bar" />
        <item
            android:id="@+id/nav_schema"
            android:icon="@drawable/ic_repeat_black_24dp"
            android:title="@string/schema_title_bar" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/map_title_bar" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings_title_bar" />

    </group>

</menu>
