<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_internet_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnEnableWifi"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_wifi"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="265dp" />

    <Button
        android:id="@+id/btnExitDialog"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="265dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:text="@string/no_internet"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="151dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="295dp"
        android:layout_height="39dp"
        android:text="@string/no_internet2"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="190dp" />

</android.support.constraint.ConstraintLayout>